bootstrap/css/bootstrap_extensions.css
/*borders*/
.page-header{
	border-color:black;
}
.page-header h1{
	text-align:center;
}
hr{
	border:1px solid #666;
}
.arrow_down_high {
	margin:0 auto;
	width:0;
	height:0;
	border-left:8px solid transparent;
	border-right:8px solid transparent;
	border-top:8px solid #333;
}
.arrow_down_low {
	margin-left:-5px;
	width:0px;
	height:5px;
	position:absolute;
	top:-5px;
	left:50%;
	border-top:10px solid #f2f2f2;
	border-left:10px solid transparent;
	border-right:10px solid transparent;
}

/*footer*/
.footer {
	border-top:5px solid #09c;
	padding:100px;
	margin-top:45px;
	background-color:#333;
	color:#f2f2f2;
	position:relative;
}

/*img*/
.pull-left{
	margin-right:10px;
	margin-top:5px;
}
img {
	 border-right:5px solid #999;
}

/*font faces/coloring*/
h1,h2,h3,h4 {
	font-weight: normal!important;
}
h1 {
	font:60px 'BebasNeueRegular', Arial, sans-serif;
}
h2{
	font:27px 'FanwoodRegular', Arial, sans-serif;
}
h3{
	font:23px 'BebasNeueRegular', Arial, sans-serif;
	padding-top:10px;
}
h4{

}

#main{
	margin-top:25px;
	margin-bottom:25px;
}
li{
	list-style-type:square;
	line-height:175%;
	margin-bottom:10px;
	font-size:15px;

}
li.indent_list{
	margin-left:15px;
}
ul{
	margin-bottom:15px;
	margin-top:15px;
}
li:lastchild {
	padding-bottom:0px;
}
p{
	color:#333;
	line-height:185%;
	font-size:14px;
}
a{
	color:#09c;
}
body{
	background-color:#f2f2f2;
	color:#333;
	border-top:5px solid #333;
}
p {
	font-family:'Lucida Grande', Arial, sans-serif !important;
}
.only_mobile {
	display:none;
}

/*tap zoom for IE8 shit*/
canvas {
		-ms-touch-action: double-tap-zoom;
}


@media (min-width:980px) {
	 /* Remove any padding from the body */
	body {
		padding-top:0px!important;
		margin-top:0px!important;
	}
	.only_mobile {
		display:none;
	}

}

@media (min-width:1210px) {

	.only_mobile {
		display:none;
	}

}

@media (max-width:768px) {

	/* Remove any padding from the body */
	body {
		padding-top:0px!important;
		margin-top:0px!important;
	}
	.hide_mobile {
		display:none;
	}
	.only_mobile {
		display:block;
	}

}

